# stratosphereElite

./: .gitignore  CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
shaders/primitive/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt
src/components/: Component.cpp  Component.hpp
src/engine/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  MouseCallbacks.hpp  Serializable.hpp  Shader.cpp  Shader.hpp  Transform.hpp  Window.cpp  Window.hpp  WindowCallbacks.hpp
src/gameobjects/: GameObject.cpp  GameObject.hpp
src/gameobjects/components/: Component.cpp  Component.hpp  RenderBatch.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
src/gameobjects/primitives/: Cube.cpp  Cube.hpp
src/glad/: glad.c  glad.h
src/renderer/: RenderBatch.hpp  Renderer.hpp  Texture.cpp  Texture.hpp
src/scenes/: LevelEditorScene.hpp  LevelScene.hpp  Scene.hpp
src/stb/: stb_image.cpp  stb_image.h
src/utils/: ArrayList.hpp  AssetPool.cpp  AssetPool.hpp  Color.cpp  Color.hpp  List.hpp  Shader.cpp
stratosphereElite-exe/: CMakeLists.txt  stratosphereElite.cpp
tests/: CMakeLists.txt
